--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ h2,
 p,
 #preview p {
   margin: 0 0 1.2em;
+  font-family: "Lucida Grande", Lucida, Verdana, sans-serif;
 }
 del {
   text-decoration: line-through;
@@ -177,7 +178,8 @@ ul.contextual-links {
   font-size: 90%;
 }
 ul.menu li {
-  margin: 0;
+  margin: 0 0 0 -20px;
+  font-size: 15px;
 }
 .region-content ul,
 .region-content ol {
@@ -226,8 +228,11 @@ ul.tips {
 }
 #header #site-name,
 #preview #preview-header #preview-site-name {
-  font-size: 200%;
+  font: 220% "Lucida Grande", Lucida, Verdana, sans-serif;
   color: #686868;
+  font-weight: bold;
+  font-variant: small-caps;
+  font-style: italic;
 }
 #header h1#site-name,
 #preview #preview-header h1#preview-site-name {
@@ -445,6 +450,8 @@ h1#page-title,
 }
 #block-system-main .node-teaser h2 a {
   color: #181818;
+  font-family: "Lucida Grande", Lucida, Verdana, sans-serif;
+  font-weight: bold;
 }
 #block-system-main .node-teaser {
   border-bottom: 1px solid #d3d7d9;
@@ -1323,3 +1330,12 @@ div.admin-panel .description {
 .overlay #preview #footer-wrapper {
   display: block;
 }
+
+/**
+ * Social Media Widgets styles.
+ */
+div.widgets-element-horizontal {
+  float: left; /* LTR */
+  margin: 1px;
+}
+
