Enlarge site slogan

--- a/css/style.css
+++ b/css/style.css
@@ -249,7 +249,7 @@ ul.tips {
 }
 #header #site-slogan {
   margin-top: 7px;
-  font-size: 100%;
+  font-size: 1.8em;
   word-spacing: 0.1em;
   font-style: italic;
 }
