--- a/css/colors.css
+++ b/css/colors.css
@@ -33,7 +33,7 @@ a:active {
   color: #23aeff;
 }
 .sidebar .block {
-  background-color: #f6f6f2;
+  background-color: #efefef;
   border-color: #f9f9f9;
 }
 #footer-wrapper {
