--- a/css/style.css
+++ b/css/style.css
@@ -527,6 +527,13 @@ h1#page-title,
   margin: 0 0 1em;
 }
 
+dt {
+  font-weight: bold;
+}
+dd {
+  margin-bottom: 1em;
+}
+
 /* ----------------- Comments ----------------- */
 
 #comment-wrapper {
