--- a/css/ckeditor_widgets.css
+++ b/css/ckeditor_widgets.css
@@ -138,10 +138,10 @@
 .box .box-content,
 .quotebox .quote,
 .quotebox .byline {
-	box-shadow: 0 1px 1px #ddd inset;
+	/*box-shadow: 0 1px 1px #ddd inset;
 	border: 1px solid #cccccc;
 	border-radius: 5px;
-	background: #fff;
+	background: #fff;*/
 	margin-left: 0;
 	margin-right: 0;
 	padding: 2px 5px;
@@ -167,7 +167,7 @@
 }
 
 .quotebox {
-	background: #eee url(icons/widgetcommonQuotebox.png) 5px 2px no-repeat;
+	background: #eee url(../images/widgetcommonQuotebox.png) 5px 2px no-repeat;
 }
 .quotebox .quote {
 	margin-left: 20px;
