--- a/css/ckeditor_widgets.css
+++ b/css/ckeditor_widgets.css
@@ -167,7 +167,8 @@
 }
 
 .quotebox {
-	background: #eee url(../images/postquote.png) 5px 2px no-repeat;
+	background: #efefef url(../images/postquote.png) 5px 2px no-repeat;
+    border: 1px solid #785fa0;
 }
 .quotebox .quote {
 	margin-left: 20px;
