Allow images' alignment to be controlled by the editor

--- a/css/style.css
+++ b/css/style.css
@@ -551,6 +551,7 @@ dd {
 .content p > img {
   border: 1px solid #785fa0;
   box-sizing: border-box;
+  display: inline-block;
 }
 
 /* ----------------- Comments ----------------- */
