Fix centering of images.

--- a/css/style.css
+++ b/css/style.css
@@ -554,6 +554,10 @@ dd {
   display: inline-block;
 }
 
+.content img {
+  margin: auto;
+}
+
 /* ----------------- Comments ----------------- */
 
 #comment-wrapper {
