--- a/css/ckeditor_widgets.css
+++ b/css/ckeditor_widgets.css
@@ -204,3 +204,18 @@
     font-size: 1.2em;
     font-weight: bold;
 }
+
+.media-element {
+	display: inline;
+}
+.media-element .content {
+	display: inline-block;
+    background: #efefef;
+    background: rgba(0, 0, 0, 0.05);
+    border: 1px solid purple;
+}
+.media-element .field-name-field-caption {
+	display: block;
+    margin-top: -6px;
+    padding: .3em 1em .6em;
+}
