--- a/css/style.css
+++ b/css/style.css
@@ -1592,12 +1592,13 @@ div.widgets-element-horizontal {
   border: 1px solid #785fa0;
   background-color: #efefef;
   padding: 8px;
-  display: inline-block;
+  display: block;
+  overflow: hidden;
 }
 .panel .panel-heading {
   text-align: center;
-    font-size: 1.2em;
-    font-weight: bold;
+  font-size: 1.2em;
+  font-weight: bold;
 }
 
 .media-element-container {
