--- a/css/wysiwyg_editor.css
+++ b/css/wysiwyg_editor.css
@@ -240,3 +240,22 @@ table.cke_editor fieldset {
 .row {
 	background: #eee;
 }
+
+a.button {
+    background: #fff url(../images/buttons.png) 0 0 repeat-x;
+    border: 1px solid #e4e4e4;
+    border-bottom: 1px solid #b4b4b4;
+    border-left-color: #d2d2d2;
+    border-right-color: #d2d2d2;
+    color: #3a3a3a;
+    cursor: pointer;
+    font-size: 90%;
+    font-weight: normal;
+    text-align: center;
+    margin-bottom: 1em;
+    padding: 4px 17px;
+    -khtml-border-radius: 15px;
+    -moz-border-radius: 20px;
+    -webkit-border-radius: 15px;
+    border-radius: 15px;
+}
