Call to action button styling in the editor

--- a/css/wysiwyg_editor.css
+++ b/css/wysiwyg_editor.css
@@ -258,4 +258,5 @@ a.button {
     -moz-border-radius: 20px;
     -webkit-border-radius: 15px;
     border-radius: 15px;
+    text-decoration: none;
 }
