Fix four column styling

--- a/css/style.css
+++ b/css/style.css
@@ -1507,15 +1507,19 @@ div.widgets-element-horizontal {
   padding-right: 7.5px;
 }
 
+.row.for-col {
+  display: flex;
+}
 .four-col .col {
-  padding-left: 7.5px;
-  padding-right: 7.5px;
+  margin-left: 5px;
+  margin-right: 5px;
+  flex: 1 auto;
 }
 .four-col .col:first-child {
-  padding-left: 0;
+  margin-left: 0;
 }
 .four-col .col:last-child {
-  padding-right: 0;
+  margin-right: 0;
 }
 
 .accordion {
