--- a/css/style.css
+++ b/css/style.css
@@ -1507,12 +1507,14 @@ div.widgets-element-horizontal {
   padding-right: 7.5px;
 }
 
-.row.for-col {
+.row.four-col {
   display: flex;
 }
 .four-col .col {
   margin-left: 5px;
   margin-right: 5px;
+  padding-left: 0;
+  padding-right: 0;
   flex: 1 auto;
 }
 .four-col .col:first-child {
