--- a/css/kateri_bartik_ckeditor_editor.css
+++ b/css/kateri_bartik_ckeditor_editor.css
@@ -206,7 +206,8 @@ table.cke_editor fieldset {
 } 
  
 .box .box-title { 
-	background: #ddd; 
+	background: #fff;
+	margin-bottom: 10px;
 } 
 .box .row { 
 	margin-left: 0; 
