Remove box title background in page

--- a/css/style.css
+++ b/css/style.css
@@ -1589,7 +1589,7 @@ div.widgets-element-horizontal {
 
 
 .box .box-title {
-  background: #ddd;
+  /*background: #ddd;*/
 }
 .box .row {
   margin-left: 0;
