Added quotebox bg image

--- a/css/kateri_bartik_ckeditor_editor.css
+++ b/css/kateri_bartik_ckeditor_editor.css
@@ -216,7 +216,7 @@ table.cke_editor fieldset {
 } 
  
 .quotebox { 
-	background: #efefef url(../images/postquote.png) 5px 2px no-repeat; 
+	background: #efefef url(../images/widgetcommonQuotebox.png) 5px 2px no-repeat; 
     border: 1px solid #785fa0; 
 } 
 .quotebox .quote { 
