Fix boxes to properly conatin floated elements

--- a/css/style.css
+++ b/css/style.css
@@ -1570,6 +1570,7 @@ div.widgets-element-horizontal {
   margin-left: 0;
   margin-right: 0;
   padding: 2px 5px;
+  overflow: hidden;
 }
 .quotebox .byline {
   text-align: right;
