--- a/css/style.css
+++ b/css/style.css
@@ -1624,6 +1624,10 @@ div.widgets-element-horizontal {
 .media-element-container {
   display: inline-block;
 }
+.media-element-container .file-video .content {
+  background: none;
+  border: 0;
+}
 .media-element-container .content {
   display: inline-block;
     background: #efefef;
